# RailwayMatrixBD

./: .gitignore  README.md  package-lock.json  package.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/global/: Footer.tsx  MenuBar.tsx
src/components/global/footer/: ApplicationVersion.tsx  Footer.tsx
src/components/global/menubar/: MenuBar.tsx  MobileMenuBar.tsx
src/components/home/: AuthorizationComponent.tsx  BusForm.tsx  DatePicker.tsx  DestinationStationDropDown.tsx  DummyMatrixBox.tsx  JourneyForm.tsx  JourneyInfo.tsx  LoaderComponent.tsx  LoginComponent.tsx  MatrixBox.tsx  NoSeatMessage.tsx  NothingToShowIfNoRouteInformation.tsx  OnlyTrainSelectionError.tsx  ProperJourneyInformationAlert.tsx  ReloadSection.tsx  RouteDetails.tsx  RouteInformation.tsx  SegmentedDestinationStationDropdown.tsx  SegmentedOriginStationDropdown.tsx  SegmentedRoute.tsx  SegmentedRouteList.tsx  SegmentedRouteNotFound.tsx  TicketNotFound.tsx  TicketNumber.tsx  TrainDetails.tsx  TrainForm.tsx  TrainInformation.tsx  UserIsReadyToFindTicket.tsx  UserTrainListComponent.tsx  UserTrainListEmptyAlert.tsx
src/interface/: SeatTypesArray.ts
src/interface/store/: ApplicationStore.ts  AuthorizationStore.ts  MatrixStoreInterface.ts
src/routes/: Home.tsx  Update.tsx
src/store/: ApplicationStore.ts  AuthorizationStore.ts  matrixStore.ts  trainStore.ts
update/: metadata.json
