[package]
name = "railwaymatrix"
version = "0.9.0"
description = "A cross-platform desktop and mobile application for checking Bangladesh Railway seat availability with intelligent matrix visualization and segmented route finding"
authors = ["AhmedTrooper"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "railwaymatrix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# Use a specific version, e.g., 2.0.0
tauri-build = { version = "2.0.0", features = [] } 

[dependencies]
# Updated to full patch version (assuming you are using 2.9.1 on the JS side)
tauri = { version = "2.9.1", features = [] } 
# Updated to full patch version (assuming you are using 2.5.0 on the JS side)
tauri-plugin-opener = "2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Updated to full patch version (assuming you are using 2.3.0 on the JS side)
tauri-plugin-os = "2.3.0"
# Updated to full patch version (assuming you are using 2.5.0 on the JS side)
tauri-plugin-http = "2.5.0"
# Updated to full patch version (assuming you are using 2.0.0 on the JS side)
tauri-plugin-clipboard-manager = "2.0.0"
